; ModuleID = '/home/carl/AnghaBench/vlc/src/media_source/extr_media_tree.c_vlc_media_tree_Add.c'
source_filename = "/home/carl/AnghaBench/vlc/src/media_source/extr_media_tree.c_vlc_media_tree_Add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@on_children_added = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @vlc_media_tree_Add(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @vlc_media_tree_AssertLocked(i32* %9)
  %11 = load i32*, i32** %6, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = call i32* @vlc_media_tree_AddChild(i32* %11, i32* %12)
  store i32* %13, i32** %8, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = icmp ne i32* %14, null
  %16 = xor i1 %15, true
  %17 = zext i1 %16 to i32
  %18 = call i64 @unlikely(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %27

21:                                               ; preds = %3
  %22 = load i32*, i32** %5, align 8
  %23 = load i32, i32* @on_children_added, align 4
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @vlc_media_tree_Notify(i32* %22, i32 %23, i32* %24, i32** %8, i32 1)
  %26 = load i32*, i32** %8, align 8
  store i32* %26, i32** %4, align 8
  br label %27

27:                                               ; preds = %21, %20
  %28 = load i32*, i32** %4, align 8
  ret i32* %28
}

declare dso_local i32 @vlc_media_tree_AssertLocked(i32*) #1

declare dso_local i32* @vlc_media_tree_AddChild(i32*, i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @vlc_media_tree_Notify(i32*, i32, i32*, i32**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
